--- a/templates/utilisateur/index.html.twig
+++ b/templates/utilisateur/index.html.twig
@@ -3,6 +3,7 @@
 	<main>
 		<h2>{{ 'donneesUser'|trans|upper }}</h2>
 		<section id="inputs">
+			<p id="error" class='rouge'>{{ 'error'|trans }}</p>
 			<p>{{ 'nom'|trans|upper }}</p>
 			<input type="text">
 			<p>{{ 'prenom'|trans|upper }}</p>
