--- a/templates/utilisateur/ok.html.twig
+++ b/templates/utilisateur/ok.html.twig
@@ -11,6 +11,16 @@
 			<span>{{ 'pOk4'|trans|upper }}</span>
 			<span>{{ 'pOk5'|trans|upper }}</span>
 		</section>
+		<section id="photo">
+			<div id='cam'></div>
+			<div id="result"></div>
+			<p id='pPhoto'>
+				<span>
+					{{ 'photo'|trans }}
+					<span id="textePhoto">0/5</span>
+				</span>
+			</p>
+		</section>
 	</main>
 {% endblock %}
 {% include "footer.html.twig" %}
