--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -9,6 +9,7 @@
 		</title>
 		{% block stylesheets %}
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
+			<link href="/css/jquery.accent-keyboard.css" rel="stylesheet">
 		{% endblock %}
 	</head>
 	<body>
@@ -25,6 +26,7 @@
 					<img src="{{ asset('/images/logo-small.png') }}" alt="Aqua Brava">
 				</div>
 			</div>
+			<div class="keyboard"></div>
 		</header>
 	</body>
 </html>
