--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -11,7 +11,8 @@
 {% block javascripts %}
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="/js/webcam.min.js"></script>
-	<script src="/js/jquery.accent-keyboard.js"></script>
+	<script type="text/javascript" src="/js/jquery.plugin.js"></script>
+	<script type="text/javascript" src="/js/jquery.keypad.js"></script>
 	<script src="/js/main.js"></script>
 	{% if app.request.pathInfo == '/' ~ app.request.locale ~ '/nOk' %}
 		<script src="/js/timeoutNok.js"></script>
