--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -10,6 +10,7 @@
 		{% block stylesheets %}
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 			<link href="/css/jquery.accent-keyboard.css" rel="stylesheet">
+			<link type="text/css" href="/css/jquery.keypad.css" rel="stylesheet">
 		{% endblock %}
 	</head>
 	<body>
@@ -26,7 +27,6 @@
 					<img src="{{ asset('/images/logo-small.png') }}" alt="Aqua Brava">
 				</div>
 			</div>
-			<div class="keyboard"></div>
 		</header>
 	</body>
 </html>
