--- a/templates/utilisateur/index.html.twig
+++ b/templates/utilisateur/index.html.twig
@@ -2,13 +2,14 @@
 {% block body %}
 	<main>
 		<h2>{{ 'donneesUser'|trans|upper }}</h2>
-		<section id="inputs">
+		<section
+			id="inputs">
 			{# <button id="keyboard">afficher clavier</button> #}
 			<p id="error" class='rouge'>{{ 'error'|trans }}</p>
 			<p>{{ 'nom'|trans|upper }}</p>
-			<input type="text" class="ak-input">
+			<input type="text" class="keyboard">
 			<p>{{ 'prenom'|trans|upper }}</p>
-			<input type="text" class="ak-input">
+			<input type="text" class="keyboard">
 		</section>
 		<section id="sexeAge">
 			<div>
@@ -27,13 +28,15 @@
 				<div>
 					<div id="ageSelect">
 						<span>
-							<span id="age">16</span>
+							<input
+							type="text" name="age" id="age" class='keypad'>
+							{# <span id="age" class="keyboard">16</span> #}
 							<span>{{ 'age'|trans|upper }}</span>
 						</span>
-						<span id="upDowmArrows">
-							<img id="up" src="{{ asset('/images/UpBlu.png') }}" alt="">
-							<img id="down" src="{{ asset('/images/DownBlu.png') }}" alt="">
-						</span>
+						{# <span id="upDowmArrows">
+													<img id="up" src="{{ asset('/images/UpBlu.png') }}" alt="">
+													<img id="down" src="{{ asset('/images/DownBlu.png') }}" alt="">
+												</span> #}
 					</div>
 					<p class="ageMini">{{ 'miniAge'|trans|upper }}</p>
 				</div>
