--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -20,8 +20,8 @@
 				<div class="col">
 					<img src="{{ asset('/images/logo-small.png') }}" alt="Aqua Brava">
 				</div>
-				<div class="col">
-					<h1>Aqua X Jump</h1>
+				<div class="col aquaXjump">
+					<img src="{{ asset('/images/aquaXjump.png') }}" alt="Aqua Brava">
 				</div>
 				<div class="col">
 					<img src="{{ asset('/images/logo-small.png') }}" alt="Aqua Brava">
