--- a/templates/utilisateur/bravo.html.twig
+++ b/templates/utilisateur/bravo.html.twig
@@ -6,7 +6,7 @@
 			<span>{{ 'pFelicitation'|trans }}</span>
 		</section>
 		<section id="pOk2">
-			<img src="{{ asset('/images/logo-small.png') }}" alt="Aqua Brava">
+			<img src="{{ asset('/images/aquaXjump.png') }}" alt="Aqua Brava">
 		</section>
 	</main>
 {% endblock %}
