--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -10,9 +10,9 @@
 </footer>
 {% block javascripts %}
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+	<script src="https://mottie.github.io/Keyboard/docs/js/jquery-ui-custom.min.js"></script>
 	<script type="text/javascript" src="/js/webcam.min.js"></script>
-	<script type="text/javascript" src="/js/jquery.plugin.js"></script>
-	<script type="text/javascript" src="/js/jquery.keypad.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/virtual-keyboard/1.30.3/js/jquery.keyboard.min.js"></script>
 	<script src="/js/main.js"></script>
 	{% if 
 		app.request.pathInfo == '/' ~ app.request.locale ~ '/nOk' or
