--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -9,8 +9,8 @@
 		</title>
 		{% block stylesheets %}
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
-			<link href="/css/jquery.accent-keyboard.css" rel="stylesheet">
 			<link type="text/css" href="/css/jquery.keypad.css" rel="stylesheet">
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/virtual-keyboard/1.30.3/css/keyboard-basic.min.css">
 		{% endblock %}
 	</head>
 	<body>
