--- a/templates/utilisateur/declaration.html.twig
+++ b/templates/utilisateur/declaration.html.twig
@@ -25,8 +25,9 @@
 		</section>
 
 		<div id="condition">
+			<img src="{{ asset('/images/fleche-droite.gif') }}" alt="">
 			<button id="securite">{{ 'securite'|trans }}</button>
-			{# <button id="donnee">{{ 'donnee'|trans }}</button> #}
+			<img id='fleche' src="{{ asset('/images/fleche-droite.gif') }}" alt="">
 		</div>
 
 		<div id="accepte">
