--- a/templates/utilisateur/declaration.html.twig
+++ b/templates/utilisateur/declaration.html.twig
@@ -38,7 +38,7 @@
 
 		<section id="fleche">
 			<a href="{{ path("certif", app.request.get('_route_params')) }}"><img src="{{ asset('/images/arrowL.png') }}" alt=""></a>
-			<img id="versOk" src="{{ asset('/images/arrowR.png') }}" alt="">
+			<img id="versOk" src="{{ asset('/images/arrowR.png') }}" alt="" class="unactiveArrow">
 		</section>
 	</main>
 {% endblock %}
