--- a/templates/utilisateur/ok.html.twig
+++ b/templates/utilisateur/ok.html.twig
@@ -9,6 +9,12 @@
 			<span>{{ 'pOk3'|trans }}</span>
 			<span>{{ 'pOk4'|trans|upper }}</span>
 		</section>
+		<section id="pOk3">
+			<span>{{ 'pOk5'|trans }}</span>
+			<span>{{ 'pOk6'|trans }}</span>
+			<span>{{ 'pOk7'|trans }}</span>
+			<span>{{ 'pOk8'|trans|upper }}</span>
+		</section>
 		<section id="photo">
 			<div id='cam'></div>
 			<div id="result"></div>
