--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -14,6 +14,9 @@
 		{% endblock %}
 	</head>
 	<body>
+		{% if id is defined %}
+			<span id='idP'>{{ id }}</span>
+		{% endif %}
 		<span id='locale' class="undisplayed">{{ app.request.locale }}</span>
 		<header>
 			<div class="container">
