--- a/templates/utilisateur/ok.html.twig
+++ b/templates/utilisateur/ok.html.twig
@@ -10,10 +10,10 @@
 			<span>{{ 'pOk4'|trans|upper }}</span>
 		</section>
 		<section id="pOk3">
-			<span>{{ 'pOk5'|trans }}</span>
-			<span>{{ 'pOk6'|trans }}</span>
-			<span>{{ 'pOk7'|trans }}</span>
-			<span>{{ 'pOk8'|trans|upper }}</span>
+			<img src="{{ asset('/images/Prohibition_Cap.png') }}" alt="Aqua Brava">
+			<img src="{{ asset('/images/Prohibition_Eyeglasses.png') }}" alt="Aqua Brava">
+			<img src="{{ asset('/images/Prohibition_Face.png') }}" alt="Aqua Brava">
+			<img src="{{ asset('/images/Prohibition_Sunglasses.png') }}" alt="Aqua Brava">
 		</section>
 		<section id="photo">
 			<div id='cam'></div>
