--- a/templates/utilisateur/certif.html.twig
+++ b/templates/utilisateur/certif.html.twig
@@ -73,7 +73,7 @@
 				<img src="{{ asset('/images/RedChecked.png') }}" class='redCheck' alt="">
 			</div>
 		</div>
-		<section id="fleche">
+		<section id="flecheCertif">
 			<a href="{{ path("utilisateur", app.request.get('_route_params')) }}"><img src="{{ asset('/images/arrowL.png') }}" alt=""></a>
 			<img id="versDeclare" src="{{ asset('/images/arrowR.png') }}" alt="">
 		</section>
