modif marge fleches 2

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -292,7 +292,7 @@ button.ui-keyboard-button[data-name='cancel']>span {
     font-size: 1.1em;
 }
 
-#condition>#fleche {
+#condition>.flecheNormeSecu {
     transform: rotate(180deg);
     -webkit-transform: rotate(180deg);
 }
