--- a/templates/utilisateur/declaration.html.twig
+++ b/templates/utilisateur/declaration.html.twig
@@ -27,7 +27,7 @@
 		<div id="condition">
 			<img src="{{ asset('/images/fleche-droite.gif') }}" alt="">
 			<button id="securite">{{ 'securite'|trans }}</button>
-			<img id='fleche' src="{{ asset('/images/fleche-droite.gif') }}" alt="">
+			<img class="flecheNormeSecu" src="{{ asset('/images/fleche-droite.gif') }}" alt="">
 		</div>
 
 		<div id="accepte">
