--- a/templates/utilisateur/ok.html.twig
+++ b/templates/utilisateur/ok.html.twig
@@ -18,12 +18,12 @@
 		<section id="photo">
 			<div id='cam'></div>
 			<div id="result"></div>
-			<p id='pPhoto'>
+			{# <p id='pPhoto'>
 				<span>
 					{{ 'photo'|trans }}
 					<span id="textePhoto">0/4</span>
 				</span>
-			</p>
+			</p> #}
 		</section>
 	</main>
 {% endblock %}
